# miochat-telnet

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: config.h  message.h
src/: config.c  main.c  message.c
